--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ django-secure==1.0
 django-braces==1.4.0
 django-crispy-forms==1.4.0
 django-markdown-deux==1.0.5
+django_widget_tweaks==1.4.1
+django-registration-redux==1.4
 
 requests==2.8.1
 beautifulsoup4==4.4.1
